comments added in all code

--- a/web/resources/index.html
+++ b/web/resources/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet"  type="text/css"  href="style.css" />
+        <link rel="stylesheet"  type="text/css"  href="resources/style.css" />
     </head>
     <body>
         <div>Index page</div>
